10 Oct 2006: 0.3.0 Miek <miek@miek.nl>
   -- major features enhancements --
  ** OUTPUT CHANGES **
   * new format character: %b: permission bits
   * output changed to: %p%T %b %u %g %l %s %n\n"
   * the LIST syntax was changed to include the
     filename size. This was due to a weird bug
     on Solaris where mangled entries are written...
  ** BIG changes **
   * No shell utils are installed anymore, only the wrappers
   * History.sh and yesterday.sh are removed from the archive
   * ${prefix/}share/rdup is used for common perl/shell files
     all utilities now source these files
   * Removed -l arg from the utils
   * All scripts are prefixed with rdup-
   * All installed scripts loose the .sh/.pl suffix (Debian Policy)
   * rdup-snap added (perl) tool ala mirror but works on hard linked
     files
   * rdup-snapshot added (shell) small wrapper for rdup and rdup-snap
     This uses 'cp -plr' which is a gnu-ism
   * Solaris 10 extended attributes support was added
  ** smaller changes **
   * Moved Makefile.in to GNUmakefile.in to force gmake usage
   * Bug fix in gzip.pl (now rdup-gzip)
   * Bug fix in crypt.pl (now rdup-crypt)
   * All documentation updated with the new names and some more updates
   * Don't install dump-here.sh or dump-here.sh.8
   * Added debian/ dir so a .deb package can be build
     (cd debian ; dpkg-buildpackage -rfakeroot)
   * If you want /etc/rdup to be in a different directory be sure
     to use ./configure --sysconfdir=foo, otherwise it might not work
   * rdup-snap.8 and rdup-snapshot.8 added
   * Refactored the wrapper scripts
   * Loose the multiple backup directory stuff
   * Check_attr() and chown_attr() to shared.pl.in
   * Adding logging to rdup-snap and rdup-mirror
   * Added rdup-snap-here and manpage
   * Making backups with 0.3.0:
   	hardlink backup:
	rdup-snapshot -b /backup/$HOSTNAME dir-to-backup
	YYYYMM/DD will be added

   	mirror backup:
	rdup-dupmp -b /backup/$HOSTNAME dir-to-backup
	YYYYMM will be added

